--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /build/
 /.idea/libraries/
 /.idea/artifacts/
+/.idea/inspectionProfiles
 /.idea/.name
 /.idea/workspace.xml
 /out/
@@ -20,3 +21,5 @@
 hs_err_pid*
 
 publish.gradle
+
+/logs/
