--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ if (file('publish.gradle').exists()) {
 }
 
 sourceCompatibility = 1.8
+sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
