--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 group 'com.infomaximum'
-version '0.0.69'
+version '0.0.70'
 
 apply plugin: 'java'
 apply plugin: 'maven'
@@ -19,6 +19,7 @@ repositories {
 dependencies {
 
     compile 'org.reflections:reflections:0.9.12'
+    compile 'com.google.guava:guava:29.0-jre'
 
     compile 'org.slf4j:slf4j-api:1.7.30'
 
