--- a/build.gradle
+++ b/build.gradle
@@ -1,28 +1,41 @@
-group 'com.infomaximum'
-version '1.0.2p4'
-
-apply plugin: 'java'
-
+plugins {
+    id 'java'
+    id 'maven-publish'
+    id 'signing'
+}
 if (project.hasProperty('ossrhUsername')) {
     apply from: 'publish.gradle'
 }
 
-sourceCompatibility = 1.8
-sourceCompatibility = 1.8
+group 'com.infomaximum'
+version '1.1.0'
+
+targetCompatibility = 17
+sourceCompatibility = 17
+
+ext.moduleName = 'cluster'
+
+compileJava {
+    doFirst {
+        options.compilerArgs = [
+                '--module-path', classpath.asPath
+        ]
+        classpath = files()
+    }
+}
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
+    implementation 'org.reflections:reflections:0.10.2'
+    implementation 'com.google.guava:guava:30.1.1-jre'
 
-    compile 'org.reflections:reflections:0.9.11'
-    compile 'com.google.guava:guava:30.1.1-jre'
+    implementation 'org.slf4j:slf4j-api:1.7.30'
 
-    compile 'org.slf4j:slf4j-api:1.7.30'
+    testImplementation 'junit:junit:4.13.2'
 
-    testCompile 'junit:junit:4.13.2'
-
-    testCompile 'ch.qos.logback:logback-core:1.2.3'
-    testCompile 'ch.qos.logback:logback-classic:1.2.3'
+    testImplementation 'ch.qos.logback:logback-core:1.2.3'
+    testImplementation 'ch.qos.logback:logback-classic:1.2.3'
 }
