--- a/publish.gradle
+++ b/publish.gradle
@@ -1,70 +1,81 @@
-apply plugin: 'maven'
-apply plugin: 'signing'
+task sourceJar(type: Jar) {
+    from sourceSets.main.allJava
+    archiveClassifier = "sources"
+}
 
-task javadocJar(type: Jar) {
-    classifier = 'javadoc'
+javadoc {
+    source = sourceSets.main.allJava
+    classpath = configurations.compileClasspath
+
+    options
+            {
+                setMemberLevel JavadocMemberLevel.PUBLIC
+                setAuthor true
+
+                links "https://docs.oracle.com/javase/8/docs/api/"
+            }
+}
+
+task packageJavadoc(type: Jar) {
     from javadoc
+    archiveClassifier = 'javadoc'
 }
 
-//Задача для сборки jar с исходниками
-task sourcesJar(type: Jar, dependsOn:classes) {
-    classifier = 'sources'
-    from sourceSets.main.allSource
-}
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
 
-//Добавляем в артифакты исходники
-artifacts {
-    archives javadocJar, sourcesJar
-}
+            from components.java
+            artifact sourceJar
+            artifact packageJavadoc
 
-signing {
-    sign configurations.archives
-}
-
-uploadArchives {
-    repositories {
-        mavenDeployer {
-            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
-
-            repository(url: "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/") {
-                authentication(userName: ossrhUsername, password: ossrhPassword)
-            }
-
-            snapshotRepository(url: "https://s01.oss.sonatype.org/content/repositories/snapshots/") {
-                authentication(userName: ossrhUsername, password: ossrhPassword)
-            }
-
-            pom.project {
-                name 'cluster'
-                packaging 'jar'
-                // optionally artifactId can be defined here
-                description 'Library for creating a light cluster '
-                url 'https://github.com/Infomaximum/cluster'
-
-                scm {
-                    connection 'scm:git:https://github.com/Infomaximum/cluster.git'
-                    developerConnection 'scm:git:git@github.com:Infomaximum/cluster.git'
-                    url 'https://github.com/Infomaximum/cluster'
+            versionMapping {
+                usage('java-api') {
+                    fromResolutionOf('runtimeClasspath')
                 }
+                usage('java-runtime') {
+                    fromResolutionResult()
+                }
+            }
 
+            pom {
+                name = 'cluster'
+                description = 'Library for creating a light cluster'
+                url = 'https://github.com/Infomaximum/cluster'
                 licenses {
                     license {
-                        name 'The Apache License, Version 2.0'
-                        url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                        name = 'The Apache License, Version 2.0'
+                        url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
                     }
                 }
-
                 developers {
                     developer {
-                        id 'infomaximum'
-                        name 'Infomaximum LLC'
-                        email 'develop@infomaximum.com'
+                        id = 'infomaximum'
+                        name = 'Infomaximum LLC'
+                        email = 'develop@infomaximum.com'
                     }
                 }
+                scm {
+                    connection = 'scm:git:https://github.com/Infomaximum/cluster.git'
+                    developerConnection = 'scm:git:git@github.com:Infomaximum/cluster.git'
+                    url = 'https://github.com/Infomaximum/cluster'
+                }
+            }
+        }
+    }
+    repositories {
+        maven {
+            def releasesRepoUrl = "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/"
+            def snapshotsRepoUrl = "https://s01.oss.sonatype.org/content/repositories/snapshots/"
+            url = version.endsWith('SNAPSHOT') ? snapshotsRepoUrl : releasesRepoUrl
+            credentials {
+                username ossrhUsername
+                password ossrhPassword
             }
         }
     }
 }
 
-uploadArchives.dependsOn 'clean'
-uploadArchives.dependsOn 'test'
+signing {
+    sign publishing.publications.mavenJava
+}
