--- a/build.gradle
+++ b/build.gradle
@@ -8,12 +8,12 @@ if (project.hasProperty('ossrhUsername')) {
 }
 
 group 'com.infomaximum'
-version '1.1.0'
+version '1.1.1'
 
 targetCompatibility = 17
 sourceCompatibility = 17
 
-ext.moduleName = 'cluster'
+ext.moduleName = 'com.infomaximum.cluster'
 
 compileJava {
     doFirst {
