--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ if (project.hasProperty('ossrhUsername')) {
 }
 
 group 'com.infomaximum'
-version '1.1.1'
+version '1.1.1p1'
 
 targetCompatibility = 17
 sourceCompatibility = 17
