--- a/publish.gradle
+++ b/publish.gradle
@@ -1,23 +1,10 @@
 task sourceJar(type: Jar) {
-    from sourceSets.main.allJava
+    from sourceSets.main.java.srcDirs
     archiveClassifier = "sources"
 }
 
-javadoc {
-    source = sourceSets.main.allJava
-    classpath = configurations.compileClasspath
-
-    options
-            {
-                setMemberLevel JavadocMemberLevel.PUBLIC
-                setAuthor true
-
-                links "https://docs.oracle.com/javase/8/docs/api/"
-            }
-}
-
 task packageJavadoc(type: Jar) {
-    from javadoc
+    from sourceSets.main.java.srcDirs
     archiveClassifier = 'javadoc'
 }
 
