--- a/build.gradle
+++ b/build.gradle
@@ -8,12 +8,15 @@ if (project.hasProperty('ossrhUsername')) {
 }
 
 group 'com.infomaximum'
-version '1.1.2'
-
-targetCompatibility = 17
-sourceCompatibility = 17
+version '1.1.3'
 
 ext.moduleName = 'com.infomaximum.cluster'
+
+java {
+    toolchain {
+        languageVersion.set(JavaLanguageVersion.of(17))
+    }
+}
 
 compileJava {
     doFirst {
