--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,9 @@ plugins {
     id 'java'
     id 'maven-publish'
     id 'signing'
+    id("de.jjohannes.extra-java-module-info") version "0.15"
 }
+apply from: 'https://raw.githubusercontent.com/Infomaximum/platform-java-module-info/main/com.infomaximum.platform-java-module-info.gradle'
 if (project.hasProperty('ossrhUsername')) {
     apply from: 'publish.gradle'
 }
@@ -32,8 +34,13 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.reflections:reflections:0.10.2'
-    implementation 'com.google.guava:guava:30.1.1-jre'
+    implementation('org.reflections:reflections:0.10.2')
+
+    implementation('com.google.guava:guava:31.1-jre') {
+        exclude group: 'com.google.guava', module: 'failureaccess'
+        exclude group: 'com.google.guava', module: 'listenablefuture'
+        exclude group: 'com.google.j2objc', module: 'j2objc-annotations'
+    }
 
     implementation 'org.slf4j:slf4j-api:1.7.30'
 
