--- a/build.gradle
+++ b/build.gradle
@@ -2,16 +2,14 @@ plugins {
     id 'java'
     id 'maven-publish'
     id 'signing'
-    id("de.jjohannes.extra-java-module-info") version "0.15"
     id "org.checkerframework" version "0.6.15" //https://github.com/kelloggm/checkerframework-gradle-plugin
 }
-apply from: 'https://raw.githubusercontent.com/Infomaximum/platform-java-module-info/0.0.8/com.infomaximum.platform-java-module-info.gradle'
 if (project.hasProperty('ossrhUsername')) {
     apply from: 'publish.gradle'
 }
 
 group 'com.infomaximum'
-version '1.1.4f2'
+version '1.1.5'
 
 ext.moduleName = 'com.infomaximum.cluster'
 
@@ -44,18 +42,15 @@ repositories {
 dependencies {
     implementation('org.reflections:reflections:0.10.2') {
         exclude group: 'com.google.code.findbugs', module: 'jsr305'
+        exclude group: 'org.javassist', module: 'javassist'
     }
+    implementation 'org.javassist:javassist:3.29.2-GA'//Более новая зависимость с поддержкой java модулей
 
-    implementation('com.google.guava:guava:31.1-jre') {
-        exclude group: 'com.google.guava', module: 'failureaccess'
-        exclude group: 'com.google.guava', module: 'listenablefuture'
-        exclude group: 'com.google.j2objc', module: 'j2objc-annotations'
-        exclude group: 'com.google.code.findbugs', module: 'jsr305'
-    }
+    implementation 'org.slf4j:slf4j-api:2.0.3'
 
-    implementation 'org.slf4j:slf4j-api:2.0.0-beta1'
-
-    testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
+    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.13.2'
 
     testImplementation 'ch.qos.logback:logback-core:1.3.0-beta0'
     testImplementation 'ch.qos.logback:logback-classic:1.3.0-beta0'
