--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ if (project.hasProperty('ossrhUsername')) {
 }
 
 group 'com.infomaximum'
-version '1.1.5'
+version '1.1.5p1'
 
 ext.moduleName = 'com.infomaximum.cluster'
 
@@ -43,6 +43,7 @@ dependencies {
     implementation('org.reflections:reflections:0.10.2') {
         exclude group: 'com.google.code.findbugs', module: 'jsr305'
         exclude group: 'org.javassist', module: 'javassist'
+        exclude group: 'org.slf4j', module: 'slf4j-api'
     }
     implementation 'org.javassist:javassist:3.29.2-GA'//Более новая зависимость с поддержкой java модулей
 
