--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ if (project.hasProperty('ossrhUsername')) {
 }
 
 group 'com.infomaximum'
-version '1.1.5p9'
+version '1.1.5p10'
 
 ext.moduleName = 'com.infomaximum.cluster'
 
@@ -47,12 +47,12 @@ dependencies {
     }
     implementation 'org.javassist:javassist:3.29.2-GA'//Более новая зависимость с поддержкой java модулей
 
-    implementation 'org.slf4j:slf4j-api:2.0.3'
+    implementation 'org.slf4j:slf4j-api:2.0.6'
 
-    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.9.0'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.0'
-    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.13.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
+    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.24.2'
 
-    testImplementation 'ch.qos.logback:logback-core:1.3.0-beta0'
-    testImplementation 'ch.qos.logback:logback-classic:1.3.0-beta0'
+    testImplementation 'ch.qos.logback:logback-core:1.4.5'
+    testImplementation 'ch.qos.logback:logback-classic:1.4.5'
 }
