--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ if (project.hasProperty('ossrhUsername')) {
 }
 
 group 'com.infomaximum'
-version '1.1.6p2'
+version '1.1.6p3'
 
 ext.moduleName = 'com.infomaximum.cluster'
 
@@ -51,7 +51,7 @@ dependencies {
 
     testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
-    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.24.2'
+    testImplementation 'org.assertj:assertj-core:3.24.2'
 
     testImplementation 'ch.qos.logback:logback-core:1.4.5'
     testImplementation 'ch.qos.logback:logback-classic:1.4.5'
