--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ if (project.hasProperty('ossrhUsername')) {
 }
 
 group 'com.infomaximum'
-version '1.1.6p6'
+version '1.1.7'
 
 ext.moduleName = 'com.infomaximum.cluster'
 
