--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,7 @@ dependencies {
 
     testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.11.3'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.11.3'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.11.3'
     testImplementation 'org.assertj:assertj-core:3.26.3'
 
     testImplementation 'ch.qos.logback:logback-core:1.5.12'
